@@ -16,37 +16,39 @@
  */
 package org.flyte.localengine.examples;
 
+import static org.flyte.flytekit.SdkBindingData.ofInteger;
+
 import com.google.auto.service.AutoService;
 import java.util.List;
 import org.flyte.api.v1.LiteralType;
 import org.flyte.api.v1.SimpleType;
 import org.flyte.flytekit.SdkBindingData;
 import org.flyte.flytekit.SdkNode;
+import org.flyte.flytekit.SdkTypes;
 import org.flyte.flytekit.SdkWorkflow;
 import org.flyte.flytekit.SdkWorkflowBuilder;
 import org.flyte.flytekit.jackson.JacksonSdkType;
-import org.flyte.localengine.ImmutableList;
 
 @AutoService(SdkWorkflow.class)
-public class ListWorkflow extends SdkWorkflow<ListTask.Output> {
+public class ListWorkflow extends SdkWorkflow<Void, ListTask.Output> {
   public ListWorkflow() {
-    super(JacksonSdkType.of(ListTask.Output.class));
+    super(SdkTypes.nulls(), JacksonSdkType.of(ListTask.Output.class));
   }
 
   @Override
   public void expand(SdkWorkflowBuilder builder) {
     SdkNode<TestUnaryIntegerOutput> sum1 =
-        builder.apply("sum-1", new SumTask().withInput("a", 1).withInput("b", 2));
+        builder.apply("sum-1", new SumTask(), SumTask.Input.create(ofInteger(1), ofInteger(2)));
     SdkNode<TestUnaryIntegerOutput> sum2 =
-        builder.apply("sum-2", new SumTask().withInput("a", 3).withInput("b", 4));
+        builder.apply("sum-2", new SumTask(), SumTask.Input.create(ofInteger(3), ofInteger(4)));
 
     SdkBindingData<List<Long>> list =
         SdkBindingData.ofBindingCollection(
             LiteralType.ofCollectionType(LiteralType.ofSimpleType(SimpleType.INTEGER)),
-            ImmutableList.of(sum1.getOutputs().o(), sum2.getOutputs().o()));
+            List.of(sum1.getOutputs().o(), sum2.getOutputs().o()));
 
     SdkNode<ListTask.Output> list1 =
-        builder.apply("list-1", new ListTask().withInput("list", list));
+        builder.apply("list-1", new ListTask(), ListTask.Input.create(list));
 
     builder.output("list", list1.getOutputs().list());
   }
